# draw-tool

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  progress.md  pyproject.toml
app/: config.py  db.py  indexer.py  main.py  models.py  templating.py  thumbnails.py
app/routes/: collections.py  extras.py  library.py  notes.py  planner.py  stats.py  tags.py
app/templates/: base.html  collections.html  dashboard.html  detail.html  graph.html  index.html  note.html  notes.html  planner.html  practice.html  report.html  settings.html  timeline.html
app/templates/partials/: collections_list.html  gallery.html  gallery_items.html  study_collections.html  study_notes.html  study_references.html  study_tags.html  vault_status.html
documents/: 00-visao-geral.md  01-requisitos.md  02-arquitetura.md  03-modelo-dados.md  04-features.md  05-roadmap.md  06-tauri-arquitetura.md  07-v2-conceito-e-requisitos.md  08-plano-desenvolvimento-agentes.md
tauri/: index.html  package-lock.json  package.json  tailwind.config.js
tauri/src/: App.tsx  index.css  index.tsx
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/migrations/: 0001_init.sql
tauri/src-tauri/src/: indexer.rs  lib.rs  thumbnails.rs  vault.rs
tauri/src/components/: DropZone.tsx  FlipBook.tsx  Gallery.tsx  ImageAnnotator.tsx  Layout.tsx  PdfThumb.tsx  PdfViewer.tsx  ReferenceList.tsx  Sidebar.tsx  WeekStatus.tsx
tauri/src/lib/: api.ts  collections.ts  config.ts  consistency.ts  courses.ts  db.ts  indexer.ts  (+16 more)
(+14 files in other folders)
