[project]
name = "draw-study"
version = "0.1.0"
description = "Obsidian focado em estudo de desenho — ferramenta pessoal localhost"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "pillow>=10.0",
    "psd-tools>=1.9",
    "pymupdf>=1.24",
    "markdown>=3.6",
]

[tool.uv]
package = false
